src/objects/Fitbit_API__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Fitbit API information</description>
    <fields>
        <fullName>Authorize_URL__c</fullName>
        <label>Authorize URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Key__c</fullName>
        <label>Client Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Get_Activities_URL__c</fullName>
        <description>URL for retrieving activity record for a specific date. Use template syntax for the date. Ex: .../activities/date/{{date}}.json</description>
        <inlineHelpText>URL for retrieving activity record for a specific date. Use template syntax for the date. Ex: .../activities/date/{{date}}.json</inlineHelpText>
        <label>Get Activities URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temporary_Credentials_URL__c</fullName>
        <description>Temporary Credentials (Request Token) URL</description>
        <inlineHelpText>Temporary Credentials (Request Token) URL</inlineHelpText>
        <label>Temporary Credentials URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Credentials_URL__c</fullName>
        <description>Token Credentials (Access Token) URL</description>
        <inlineHelpText>Token Credentials (Access Token) URL</inlineHelpText>
        <label>Token Credentials URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Fitbit API</label>
</CustomObject>